Added the posibility replicate recipes from other users

--- a/OnlyPan/Views/User/Profile.cshtml
+++ b/OnlyPan/Views/User/Profile.cshtml
@@ -17,12 +17,47 @@
             <p class="font-bold text-uppercase my-3">Seguidos:<span class="font-normal normal-case"> @Model.Followed</span></p>
             
       
-            <div>
-                <a asp-action="EditProfile" asp-controller="User" class="bg-[#069E2D] hover:bg-[#35605A] text-white font-bold py-2 px-4 rounded">Editar</a>
-                <a asp-action="Petition" asp-controller="Role" class="bg-[#D81E5B] hover:bg-[#69140E] text-white font-bold py-2 px-4 rounded">Solicita Tu Rol</a>
-        <span class="text-success">@ViewBag.Sucess</span>
-      </div>
-
+        <div>
+            <a asp-action="EditProfile" asp-controller="User" class="bg-[#069E2D] hover:bg-[#35605A] text-white font-bold py-2 px-4 rounded">Editar</a>
+            <a asp-action="Petition" asp-controller="Role" class="bg-[#D81E5B] hover:bg-[#69140E] text-white font-bold py-2 px-4 rounded">Solicita Tu Rol</a>
+            <span class="text-success">@ViewBag.Sucess</span>
+        </div>
+        <div class="container">
+            <h2 class="font-bold text-3xl mb-3 italic">Recetas Replicadas</h2>
+                <table class="table min-w-full text-left text-sm">
+                    <thead class="border-b font-medium dark:border-neutral-500">
+                        <tr>
+                            <th scope="col" class="px-6 py-4">
+                                Nombre de la receta
+                            </th>
+                            <th scope="col" class="px-6 py-4">
+                                Eliminar
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    @foreach (var replic in Model.Replics)
+                    {
+                            <tr class=" border-b transition duration-300 ease-in-out hover:bg-orange-200 dark:border-orange-200 dark:hover:bg-orange-200">
+                                <td class="whitespace-nowrap px-6 py-4 font-medium">
+                                    <a class="link-success" asp-action="ViewReplic"
+                                       asp-controller="User" asp-route-replicId="@replic.IdReplic">
+                                        @Html.DisplayFor(m => replic.Name)
+                                    </a>
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4">
+                                    <a class="link-danger space-x-1.5" asp-action="DeleteReplic" asp-controller="User"
+                                       asp-route-replicId="@replic.IdReplic">
+                                        Eliminar
+                                    </a>
+                                </td>
+                            </tr>
+                    }
+                    <span class="alert-danger">@ViewBag.Error</span>
+                    <span class="alert-success">@ViewBag.Success</span>
+                    </tbody>
+                </table>
+        </div>
     </div>
   </div>
 </div>
