--- a/OnlyPan/Views/User/Login.cshtml
+++ b/OnlyPan/Views/User/Login.cshtml
@@ -29,8 +29,8 @@
       </div>
       <div>
         <input type="submit" value="Iniciar sesión" class="bg-[#069E2D] hover:bg-[#35605A] text-white font-bold py-2 px-4 rounded mb-2 input-form">
-        <span class="alert-danger">@ViewBag.Error</span>
-        <span class="alert-success">@ViewBag.Success</span>
+        <span class="">@ViewBag.Error</span>
+        <span class="">@ViewBag.Success</span>
       </div>
     </form>
 
