--- a/OnlyPan/wwwroot/css/site.css
+++ b/OnlyPan/wwwroot/css/site.css
@@ -9,6 +9,8 @@
     --fourth-color: #1D4E17;
     --black: #0B100C;
     --white: #ffffff;
+    --notification-background: #ffffff;
+    --notification-primary: #BC0119;
 }
 
 html, body {
