--- a/OnlyPan/Views/User/EditProfile.cshtml
+++ b/OnlyPan/Views/User/EditProfile.cshtml
@@ -1,4 +1,4 @@
-@model OnlyPan.Models.ViewModels.UserViewModels.ProfileEditViewModel
+﻿@model OnlyPan.Models.ViewModels.UserViewModels.ProfileEditViewModel
 <div class="container-fluid">
   <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900 text-uppercase">Editar Perfil de usuario</h2>
   <!--TODO Display the profile into a floating card-->
