--- a/OnlyPan/wwwroot/css/site.css
+++ b/OnlyPan/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-@tailwind base;
+﻿@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -122,6 +122,11 @@ color: inherit;
     height:300px;
     object-fit:fill;
     
+}
+.img-recipes {
+    width: 300px;
+    height: 300px;
+    object-fit: fill;
 }
 .user-image {
     border-radius: 12px;
