Added a responsive design for the navbar & footer

--- a/OnlyPan/Views/Shared/_Layout.cshtml
+++ b/OnlyPan/Views/Shared/_Layout.cshtml
@@ -13,19 +13,19 @@
 <body class="h-full">
     <header>
         <!-- NavBar OnlyPan-->
-        <nav class="navbar navbar-expand-lg bg-[var(--black)] navbar-page ">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-[var(--black)] navbar-page">
+            <div class="container-fluid justify-content-center lg:justify-between text-center   ">
                 <!--Logo-->
-                <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300" asp-area="" asp-controller="Home"
+                <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300 align-center" asp-area="" asp-controller="Home"
                    asp-action="Index">
                     Only<span class="logo2">Pan</span>
                 </a>
 
                 @* Navbar navigation links *@
-                <div class="navbar-collapse d-sm-inline-flex  justify-content-between flex ">
-                    <ul class="navbar-nav flex-grow-1 gap-2 ">
-                        <li class="nav-item font-bold">
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Index">
+                <div class="navbar-collapse flex justify-center text-center lg:justify-start">
+                    <ul class="navbar-nav flex lg:flex-row sm:flex-col items-center">
+                        <li class="nav-item font-bold ">
+                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md lg:px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Index">
                                 <!--
                                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/>
@@ -60,10 +60,13 @@
                         }
                     </ul>
                 </div>
+
                 @* Search Bar *@
-                <form class="d-flex m-1.5 space-x-1.5" asp-action="Search" asp-controller="Recipes" role="search" method="post">
+                <div class="flex flex-col lg:flex-row justify-center items-center">
+
+                <form class="m-1.5 space-x-1.5 flex justify-center lg:items-center flex-col lg:flex-row" asp-action="Search" asp-controller="Recipes" role="search" method="post">
                     <input class="form-control rounded-md input-navbar" type="search" placeholder="¿Qué Cocinarás Hoy?" aria-label="Search" name="searchText">
-                    <button class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 mt-1" type="submit">
+                    <button class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex mt-1 gap-4 flex justify-center align-center" type="submit">
 
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
@@ -71,10 +74,12 @@
 
                     </button>
                 </form>
+                
+
                 <!--Login buttons-->
                 @if (Context.User.Identity is { IsAuthenticated: true })
                 {
-                    <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
+                    <ul class="flex lg:flex-row sm:flex-col items-center ">
 
                         <li class="nav-item">
                             <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 font-bold" asp-area="" asp-controller="User" asp-action="Profile">
@@ -87,7 +92,7 @@
                             </a>
                         </li>
                         <li class="nav-item font-bold">
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="User" asp-action="Logout">
+                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 font-bold" asp-area="" asp-controller="User" asp-action="Logout">
                                 Cerrar Sesión
                                 <!--
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -103,7 +108,7 @@
                     <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
                         <li class="nav-item">
 
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="User" asp-action="Login">
+                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 font-bold" asp-area="" asp-controller="User" asp-action="Login">
                                 <!--
                                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="pr-2 w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"/>
@@ -113,7 +118,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2"
+                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 font-bold"
                                asp-area="" asp-controller="User" asp-action="Register">
                                 Registrate
 
@@ -126,6 +131,7 @@
                         </li>
                     </ul>
                 }
+                </div>
                 @{
                     /*
                     <<div class="space-x-1.5">
@@ -183,7 +189,7 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="bg-black text-center dark:bg-black lg:text-left flex flex-row justify-between">
+    <footer class="bg-black text-center dark:bg-black lg:text-left flex  flex-col lg:flex-row justify-center lg:justify-between ">
         <div class=" m-3 pl-10 pt-2">
             <!--Logo-->
             <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300" asp-area="" asp-controller="Home"
@@ -193,7 +199,7 @@
         </div>
 
         <div class="p-4 text-center text-neutral-700 dark:text-neutral-200">
-            <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
+            <ul class="flex lg:flex-row flex-col items-center space-x-1.5">
                 <li class="nav-item font-bold">
                     <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Index">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -205,11 +211,12 @@
                 </li>
                 <li class="nav-item font-bold">
                     <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Bio">
-                        ¿Quienes Somos?
-
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
                         </svg>
+                        ¿Quienes Somos?
+
+      
 
 
                     </a>
