Added a responsive design for index cards

--- a/OnlyPan/Views/Home/Index.cshtml
+++ b/OnlyPan/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 
     <div class="flex sm:flex-col md:flex-row py-3">
-      <div class="md:w-1/2 px-4 ">
+      <div class="lg:w-1/2 px-4 ">
         <!-- Tarjeta izquierda -->
         <div class=" p-4">
 
@@ -35,13 +35,13 @@
 
         </div>
       </div>
-      <div class="md:w-1/2"></div> <!-- Espacio vacío a la derecha -->
+      <div class="lg:w-1/2"></div> <!-- Espacio vacío a la derecha -->
     </div>
 
 
-    <div class="flex sm:flex-col md:flex-row">
-      <div class="md:w-1/2"></div> <!-- Espacio vacío a la izquierda -->
-      <div class="md:w-1/2  px-4">
+    <div class="flex sm:flex-col lg:flex-row">
+      <div class="lg:w-1/2"></div> <!-- Espacio vacío a la izquierda -->
+      <div class="lg:w-1/2  px-4">
         <!-- Tarjeta derecha -->
         <div class="p-4">
 
@@ -68,7 +68,7 @@
     </div>
 
     <div class="flex sm:flex-col md:flex-row">
-      <div class="md:w-1/2 px-4">
+      <div class="lg:w-1/2 px-4">
         <!-- Tarjeta izquierda -->
         <div class=" p-4 ">
 
@@ -92,7 +92,7 @@
 
         </div>
       </div>
-      <div class="md:w-1/2"></div> <!-- Espacio vacío a la derecha -->
+      <div class="lg:w-1/2"></div> <!-- Espacio vacío a la derecha -->
     </div>
 
 
