--- a/OnlyPan/wwwroot/css/site.css
+++ b/OnlyPan/wwwroot/css/site.css
@@ -123,11 +123,7 @@ color: inherit;
     object-fit:fill;
     
 }
-.img-recipes {
-    width: 300px;
-    height: 300px;
-    object-fit: fill;
-}
+
 .user-image {
     border-radius: 12px;
 }
@@ -202,4 +198,10 @@ main {
     to {
         transform: scaleX(1);
     }
+}
+
+.img-recipe {
+    width: 300px;
+    height: 300px;
+    object-fit: fill;
 }
