--- a/OnlyPan/wwwroot/css/styles.css
+++ b/OnlyPan/wwwroot/css/styles.css
@@ -737,3 +737,10 @@ main {
     transform: scaleX(1);
   }
 }
+
+.img-recipe {
+  width: 300px;
+  height: 300px;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
