Added Notification Styles for the TempData messages

--- a/OnlyPan/wwwroot/css/styles.css
+++ b/OnlyPan/wwwroot/css/styles.css
@@ -555,6 +555,10 @@ body {
   /*background-color: #BCA693;*/
 }
 
+.logo, .nav-title {
+  font-family:'Agbalumo',sans-serif;
+}
+
 a {
   text-decoration:none;
   color: inherit;
