--- a/OnlyPan/wwwroot/css/site.css
+++ b/OnlyPan/wwwroot/css/site.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Montserrat:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 :root {
     --first-color: #BC0119;
     --second-color: #C7814A;
@@ -23,6 +27,9 @@ body {
     /*background-color: #BCA693;*/
 }
 
+.logo, .nav-title {
+font-family:'Agbalumo',sans-serif;
+}
 a {
 text-decoration:none;
 color: inherit;
