--- a/OnlyPan/Views/Recipes/Index.cshtml
+++ b/OnlyPan/Views/Recipes/Index.cshtml
@@ -1,11 +1,13 @@
 @model List<OnlyPan.Models.ViewModels.RecipesViewModels.RecipeFeedViewModel>
 <a asp-action="Create" class="btn btn-primary bg-blue-500 m-11 mb-0">Crear Receta</a>
- <div class = "grid lg:grid-cols-3 m-5 gap-2">
+ <div class = "grid lg:grid-cols-3 m-5 gap-2 max-w-7xl">
 @foreach (var recipe in Model)
 {
     <a asp-action="View" asp-controller="Recipes" asp-route-idRecipe="@recipe.IdRecipe">
             <div class="max-w-sm rounded overflow-hidden shadow-lg ">
-            <img class="img-thumbnail min-w-full object-fill justify-content-center" style='max-height:170px;' src="data:image;base64,@Convert.ToBase64String(recipe.Photo!)" alt="imagen @recipe.Name"/>
+               <div class ="flex justify-center align-center">
+            <img class="img-thumbnail img-recipe flex justify-center align-center" style='max-height:170px;' src="data:image;base64,@Convert.ToBase64String(recipe.Photo!)" alt="imagen @recipe.Name"/>
+                </div>
             <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2"><h1 class="title uppercase">@recipe.Name</h1></div>
                 <p class="text-gray-700 text-base">@recipe.Description</p>
