--- a/OnlyPan/Views/Admin/ViewRecipe.cshtml
+++ b/OnlyPan/Views/Admin/ViewRecipe.cshtml
@@ -1,33 +1,34 @@
 @model OnlyPan.Models.ViewModels.RecipesViewModels.RecipeViewModel
-<div class="container">
+<div class="container flex justify-center align-center flex-column w-1/2 my-5">
     <span class="text-danger">@ViewBag.Error</span>
     <span class="text-success">@ViewBag.Success</span>
-    <h2 class="uppercase">@Model.Name</h2>
+    <h2 class="uppercase font-bold">@Model.Name</h2>
     <h3 class="text-gray-500">
-        Autor:
-        <a class="linkprimary" asp-controller="User" asp-action="ProfileUser" asp-route-userId="@Model.ChefId">
+        <span class="font-bold text-black">Autor:</span>
+        <a class="linkprimary text-xl italic transition ease-in-out delay-150 duration-300 text-orange-900 hover:text-lime-800" asp-controller="User" asp-action="ProfileUser" asp-route-userId="@Model.ChefId">
             @Model.Chef
         </a>
-        <span>@Model.Date</span>
+       
     </h3>
-    <p> Categoria: @Model.Category, Etiqueta: @Model.Tag</p>
+    <span>@Model.Date</span>
+    <p> <span class="font-bold text-black">Categoria: </span>@Model.Category, Etiqueta: @Model.Tag</p>
     @foreach(var photo in Model.Photos!)
     {
-        <img class="img-thumbnail" src="data:image;base64,@Convert.ToBase64String(photo)" alt="imagen @Model.Name"/>
+        <img class="img-thumbnail img-recipe" src="data:image;base64,@Convert.ToBase64String(photo)" alt="imagen @Model.Name"/>
     }
-    <h3 class="uppercase">Descripcion de la receta</h3>
+    <h3 class="uppercase font-bold my-3">Descripcion de la receta</h3>
     <p class="text-black">@Model.Description</p>
-    <h3 class="uppercase">Ingredientes de la receta</h3>
+    <h3 class="uppercase font-bold my-3">Ingredientes de la receta</h3>
     <ul class="list-disc">
         @foreach (var ingredient in Model.Ingredients!)
         {
             <li>@ingredient</li>
         }
     </ul>
-    <h3 class="uppercase">Pasos de la receta</h3>
+    <h3 class="uppercase font-bold my-3">Pasos de la receta</h3>
     <p class="text-black">@Model.Instructions</p>
-    <div class="container">
-        <a class="link-success" asp-action="AcceptRecipe" asp-controller="Admin" asp-route-idRecipe="@Model.IdRecipe">Aceptar Receta</a>
-        <a class="link-danger" asp-action="BlockRecipe" asp-controller="Admin" asp-route-idRecipe="@Model.IdRecipe">Bloquear Receta</a>
+    <div class="container my-2">
+        <a class="inline-flex items-center py-2 px-1 bg-green-600 transition ease-in-out delay-75 hover:bg-green-700 text-white text-sm font-medium rounded-md hover:-translate-y-1 hover:scale-110 w-28" asp-action="AcceptRecipe" asp-controller="Admin" asp-route-idRecipe="@Model.IdRecipe">Aceptar Receta</a>
+        <a class="inline-flex items-center py-2 px-1 bg-red-600 transition ease-in-out delay-75 hover:bg-red-700 text-white text-sm font-medium rounded-md hover:-translate-y-1 hover:scale-110 w-28" asp-action="BlockRecipe" asp-controller="Admin" asp-route-idRecipe="@Model.IdRecipe">Bloquear Receta</a>
     </div>
 </div>
