--- a/OnlyPan/Views/User/ViewReplic.cshtml
+++ b/OnlyPan/Views/User/ViewReplic.cshtml
@@ -5,11 +5,13 @@
     <h2 class="uppercase font-bold">@Model.Name</h2>
     <h3 class="text-gray-500">
         <span class="font-bold text-black">Autor:</span>
-        <a class="linkprimary" asp-controller="User" asp-action="ProfileUser" asp-route-userId="@Model.ChefId">
+        <a class="linkprimary linkprimary linkprimary text-xl italic transition ease-in-out delay-150 duration-300 text-orange-900 hover:text-lime-800" asp-controller="User" asp-action="ProfileUser" asp-route-userId="@Model.ChefId">
             @Model.Chef
         </a>
-        <span>Fecha Creacion Receta:@Model.Date    Fecha Replica:@Model.DateReplicated</span>
+        
     </h3>
+    <span>Fecha Creacion Receta:@Model.Date</span>
+    <span>Fecha Replica:@Model.DateReplicated</span>
     <p> <span class="font-bold text-black">Categoria:</span> @Model.Category, Etiqueta: @Model.Tag</p>
     <div class="grid lg:grid-cols-3 gap-0">
     @foreach (var photo in Model.Photos!)
