--- a/OnlyPan/Views/Admin/Moderate.cshtml
+++ b/OnlyPan/Views/Admin/Moderate.cshtml
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="max-w-sm w-full lg:max-w-full lg:flex">
-            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/icons/commentary.jpg')" title="Comentarios Reportados">
+            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/icons/Donations.jpg')" title="Donaciones Aprobadas">
             </div>
             <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
                 <div class="mb-8">
@@ -60,7 +60,7 @@
                         Administrador
                     </p>
                     <div class="text-gray-900 font-bold text-xl mb-2">Donaciones Hechas</div>
-                    <p class="text-gray-700 text-base">En esta pestaña podrás regular los comentarios que hayan sido reportados por la comunidad. Elige si eliminarlos del foro correspondiente o dejarlos allí.</p>
+                    <p class="text-gray-700 text-base">Apoya a nuestra comunidad culinaria. Con "Donaciones Hechas", el admin de OnlyPan rastrea y celebra cada contribución. Tu generosidad no solo alimenta nuestra plataforma, sino que también nutre la pasión compartida por la cocina. ¡Gracias por ser parte de este viaje delicioso!</p>
                 </div>
 
                 <div class="item">
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="max-w-sm w-full lg:max-w-full lg:flex">
-            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/icons/commentary.jpg')" title="Comentarios Reportados">
+            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/icons/Aprobation.jpg')" title="Recetas Aprobadas">
             </div>
             <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
                 <div class="mb-8">
@@ -81,7 +81,7 @@
                         Moderador
                     </p>
                     <div class="text-gray-900 font-bold text-xl mb-2">Recetas Pendientes</div>
-                    <p class="text-gray-700 text-base">En esta pestaña podrás regular los comentarios que hayan sido reportados por la comunidad. Elige si eliminarlos del foro correspondiente o dejarlos allí.</p>
+                    <p class="text-gray-700 text-base">¿Listo para descubrir tu próximo platillo estrella? Con la función de Recetas Pendientes en OnlyPan, el administrador tiene el control total. Organiza y gestiona las deliciosas propuestas de la comunidad antes de que lleguen a la mesa virtual. Mantén la emoción viva mientras esperas a que estas prometedoras creaciones culinarias sean compartidas con la creciente familia de OnlyPan. ¡Prepárate para sabores emocionantes y experiencias culinarias inolvidables!</p>
                 </div>
 
                 <div class="item">
